<?xml version="1.0" encoding="utf-8"?>
<com.facebook.shimmer.ShimmerFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/shimmerLayout"
    android:layout_width="match_parent"
    app:shimmer_auto_start="true"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

        <include layout="@layout/placeholder_items" />

    </androidx.appcompat.widget.LinearLayoutCompat>
</com.facebook.shimmer.ShimmerFrameLayout>
